<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.gitools</groupId>
    <artifactId>gitools</artifactId>
    <packaging>pom</packaging>
    <version>2.4.0-SNAPSHOT</version>

    <name>gitools</name>
    <description>Gitools</description>
    <url>http://gitools.github.io/gitools</url>

    <organization>
        <name>Universitat Pompeu Fabra - Biomedical Genomics group</name>
        <url>http://bg.upf.edu</url>
    </organization>

    <licenses>
        <license>
            <name>GNU General Public License (GPL) version 3.0</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/gitools/gitools/issues</url>
    </issueManagement>

    <scm>
        <url>git@github.com:gitools/gitools.git</url>
        <connection>scm:git:git@github.com:gitools/gitools.git</connection>
        <developerConnection>scm:git:git@github.com:gitools/gitools.git</developerConnection>
    </scm>

    <modules>
        <module>org.gitools.utils</module>
        <module>org.gitools.cli</module>
        <module>org.gitools.ui.platform</module>
        <module>org.gitools.ui.app</module>
        <module>org.gitools.api</module>
        <module>org.gitools.analysis</module>
        <module>org.gitools.persistence</module>
        <module>org.gitools.matrix</module>
        <module>org.gitools.resource</module>
        <module>org.gitools.heatmap</module>
        <module>org.gitools.plugins.mutex</module>
        <module>org.gitools.ui.core</module>
        <module>org.gitools.datasources</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <license.licenseName>gpl_v3</license.licenseName>
        <license.inceptionYear>2013</license.inceptionYear>
        <exclude.tests>org/gitools/analysis/**/*.java</exclude.tests>
    </properties>

    <profiles>
        <profile>
            <id>test-analysis</id>
            <properties>
                <exclude.tests></exclude.tests>
            </properties>
        </profile>
    </profiles>

    <repositories>

        <repository>
            <id>project</id>
            <name>Project Maven Repository</name>
            <layout>default</layout>
            <url>file://${project.basedir}/../lib</url>
        </repository>

        <repository>
            <id>java.net</id>
            <url>http://download.java.net/maven/2</url>
        </repository>

    </repositories>

    <distributionManagement>
        <site>
            <id>site</id>
            <name>Gitools ghpages checkout</name>
            <url>file://${basedir}/site/${project.version}</url>
        </site>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.jboss.weld.se</groupId>
                <artifactId>weld-se-core</artifactId>
                <version>2.2.0.Alpha1</version>
            </dependency>

            <dependency>
                <groupId>javax.enterprise</groupId>
                <artifactId>cdi-api</artifactId>
                <version>1.1</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>16.0.1</version>
            </dependency>

            <dependency>
                <groupId>commons-net</groupId>
                <artifactId>commons-net</artifactId>
                <version>3.0.1</version>
            </dependency>

            <dependency>
                <groupId>net.sf.opencsv</groupId>
                <artifactId>opencsv</artifactId>
                <version>2.3</version>
            </dependency>

            <dependency>
                <groupId>args4j</groupId>
                <artifactId>args4j</artifactId>
                <version>2.0.16</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity</artifactId>
                <version>1.6.4</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.6.1</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.6.1</version>
            </dependency>

            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.14</version>
            </dependency>

            <dependency>
                <groupId>cobra</groupId>
                <artifactId>cobra</artifactId>
                <version>0.98.5</version>
            </dependency>

            <dependency>
                <groupId>rhino</groupId>
                <artifactId>js</artifactId>
                <version>1.7R2</version>
            </dependency>

            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>1.4.16</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.2</version>
            </dependency>

            <dependency>
                <groupId>net.sourceforge.jexcelapi</groupId>
                <artifactId>jxl</artifactId>
                <version>2.6.12</version>
            </dependency>

            <dependency>
                <groupId>weblookandfeel</groupId>
                <artifactId>weblookandfeel</artifactId>
                <version>1.28</version>
            </dependency>

            <dependency>
                <groupId>com.apple</groupId>
                <artifactId>AppleJavaExtensions</artifactId>
                <version>1.4</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.1</version>
            </dependency>

            <dependency>
                <groupId>com.jgoodies</groupId>
                <artifactId>forms</artifactId>
                <version>1.2.1</version>
            </dependency>

            <dependency>
                <groupId>com.intellij</groupId>
                <artifactId>forms_rt</artifactId>
                <version>7.0.3</version>
            </dependency>

            <dependency>
                <groupId>com.jgoodies</groupId>
                <artifactId>binding</artifactId>
                <version>2.0.6</version>
            </dependency>

            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>20090211</version>
            </dependency>

            <dependency>
                <groupId>org.swinglabs</groupId>
                <artifactId>swingx</artifactId>
                <version>1.6.1</version>
            </dependency>

            <dependency>
                <groupId>com.brsanthu</groupId>
                <artifactId>google-analytics-java</artifactId>
                <version>1.1.1</version>
            </dependency>

            <dependency>
                <groupId>edu.upf.bg</groupId>
                <artifactId>mtabix</artifactId>
                <version>1.0-20140519</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.9</version>
            </dependency>

            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>2.6</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.5</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <optimize>true</optimize>
                    <debug>true</debug>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-compiler-javac</artifactId>
                        <version>1.9.1</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/main/assemble/dist.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>1.4</version>
                <configuration>
                    <verbose>false</verbose>
                    <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
                    <roots>
                        <root>src/main/java</root>
                        <root>src/test/java</root>
                    </roots>
                    <excludes>
                        <exclude>org/gitools/ui/genomespace/dm/*.java</exclude>
                        <exclude>org/gitools/ui/genomespace/GS*.java</exclude>
                        <exclude>org/gitools/utils/csv/CSVParser.java</exclude>
                        <exclude>org/gitools/utils/csv/CSVReader.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>first</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.0</version>
                <dependencies>
                    <dependency>
                        <groupId>org.kohsuke</groupId>
                        <artifactId>doxia-module-markdown</artifactId>
                        <version>1.0</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-report-plugin</artifactId>
                            <version>2.12.4</version>
                            <configuration>
                                <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                                <aggregate>true</aggregate>
                            </configuration>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-jxr-plugin</artifactId>
                            <version>2.2</version>
                            <configuration>
                                <aggregate>true</aggregate>
                            </configuration>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-pmd-plugin</artifactId>
                            <version>3.0.1</version>
                            <configuration>
                                <linkXref>true</linkXref>
                                <sourceEncoding>utf-8</sourceEncoding>
                                <minimumTokens>100</minimumTokens>
                                <targetJdk>1.6</targetJdk>
                                <aggregate>true</aggregate>
                            </configuration>
                        </plugin>

                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>2.3.1</version>
                        </plugin>

                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>cobertura-maven-plugin</artifactId>
                            <version>2.5.2</version>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-checkstyle-plugin</artifactId>
                            <version>2.6</version>
                        </plugin>

                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>taglist-maven-plugin</artifactId>
                            <version>2.4</version>
                            <configuration>
                                <tags>
                                    <tag>TODO</tag>
                                    <tag>FIXME</tag>
                                </tags>
                            </configuration>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>2.7</version>
                            <configuration>
                                <minmemory>512m</minmemory>
                                <maxmemory>1g</maxmemory>
                                <linksource>true</linksource>
                            </configuration>
                            <reportSets>
                                <reportSet>
                                    <reports>
                                        <report>aggregate</report>
                                        <report>test-aggregate</report>
                                        <report>fix</report>
                                        <report>test-fix</report>
                                    </reports>
                                </reportSet>
                            </reportSets>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-project-info-reports-plugin</artifactId>
                            <version>2.3.1</version>
                            <reportSets>
                                <reportSet>
                                    <reports>
                                        <report>summary</report>
                                        <report>license</report>
                                    </reports>
                                </reportSet>
                            </reportSets>
                        </plugin>

                    </reportPlugins>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <excludes>
                        <exclude>${exclude.tests}</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <classpathPrefix/>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.2</version>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

</project>